--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Asfalticos from '@components/landing/Asfalticos.astro';
   </div>
 
   <div id="productos"></div>
-  <div class="bg-[#747677] bg-cover bg-center bg-no-repeat">
+  <div class="bg-gradient-to-r from-[#9BAFD9] to-[#103783]">
     <Tpo />
     <ProductsByBrand categoria="Impermeabilizantes TPO" bgColor="" />
   </div>
