Add Aquaflex liquid waterproofing products
Added new product entries and images for Aquaflex Roof Plus and Aquaflex Techos HR Green. Updated Aquaflex Techos Fibratado to use correct image and metadata. Modified homepage to display 'Impermeabilizantes Liquidos' category instead of TPO.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Asfalticos from '@components/landing/Asfalticos.astro';
   <div id="productos"></div>
   <div class="bg-gradient-to-r from-[#9BAFD9] to-[#103783]">
     <Tpo />
-    <ProductsByBrand categoria="Impermeabilizantes TPO" bgColor="" />
+    <ProductsByBrand categoria="Impermeabilizantes Liquidos" bgColor="" />
   </div>
 
   <div class="bg-[url('/src/assets/images/fondos/fondo-claro-meteoro.webp')] bg-cover bg-center bg-no-repeat">
