--- a/src/components/landing/LiquidosMapei.astro
+++ b/src/components/landing/LiquidosMapei.astro
@@ -2,8 +2,7 @@
 import { Image } from "astro:assets";
 
 // Importación de la imagen descriptiva de la empresa
-import impermeabilizantesImage from "@assets/images/impermeabilizantes-gaf-.webp";
-import sistemaImage from "@assets/images/membrana-impermeabilizante-tpo-gaf-.webp";
+import impermeabilizantesImage from "@assets/images/impermeabilizacion-techo-mapei-mexico.webp";
 ---
 
 <section class="py-12" id="productos">
@@ -14,8 +13,8 @@ import sistemaImage from "@assets/images/membrana-impermeabilizante-tpo-gaf-.web
       <!-- Imagen descriptiva de la empresa -->
       <div class="w-full lg:w-1/2">
         <Image
-          src={sistemaImage}
-          alt="Membranas Impermeabilizantes TPO GAF"
+          src={impermeabilizantesImage}
+          alt="Impermeabilizantes Líquidos Mapei"
           class="rounded-lg w-full h-auto"
           width={889}
           height={667}
