--- a/src/components/landing/ProductsByBrand.astro
+++ b/src/components/landing/ProductsByBrand.astro
@@ -53,7 +53,7 @@ const productosFiltrados = allProductos.filter((producto) => {
             />
 
             <!-- Título del producto -->
-            <h3 class="text-persianRed text-2xl font-bold text-left md:flex-1">{producto.data.name}</h3>
+            <h3 class="text-primary text-2xl font-bold text-left md:flex-1">{producto.data.name}</h3>
           </div>
 
           <!-- Segunda fila: Descripción y botón -->
