--- a/src/components/landing/Membranas.astro
+++ b/src/components/landing/Membranas.astro
@@ -5,17 +5,16 @@ import { Image } from "astro:assets";
 import sistemaImage from "@assets/images/membranas-impermeabilizantes-pvc.webp";
 ---
 
-
 <section class="py-12" id="tpo">
   <div class="mx-4">
     <div
-      class="max-w-6xl px-4 sm:px-6 lg:px-8 flex flex-col lg:flex-row gap-[5px] items-center py-4 lg:py-12  bg-white rounded-md mx-auto shadow-lg hover:shadow-xl transition-shadow duration-300"
+      class="max-w-6xl px-4 sm:px-6 lg:px-8 flex flex-col lg:flex-row gap-[5px] items-center py-4 lg:py-12 bg-white rounded-md mx-auto shadow-lg hover:shadow-xl transition-shadow duration-300"
     >
       <!-- Imagen descriptiva de la empresa -->
       <div class="w-full lg:w-1/2">
         <Image
           src={sistemaImage}
-          alt="Membranas Impermeabilizantes TPO GAF"
+          alt="Membranas Líquidas y Cementosas Mapei"
           class="rounded-lg w-full h-auto"
           width={889}
           height={667}
@@ -30,20 +29,24 @@ import sistemaImage from "@assets/images/membranas-impermeabilizantes-pvc.webp";
           class="text-primary text-2xl md:text-3xl font-bold mb-2 leading-snug"
           data-aos="fade-right"
         >
-          Membranas Impermeabilizantes <strong class="text-accent">PVC</strong> (Policloruro de Vinilo)
+          <strong>Membranas Líquidas y Cementosas</strong> para Estructuras
         </h2>
         <div class="w-[140px] h-[2px] bg-accent mb-6"></div>
         <p class="text-gray-700 text-lg leading-relaxed" data-aos="fade-right">
-          Ofrecen un rendimiento excepcional a un precio rentable. Su
-          flexibilidad inherente, resistencia a los hongos y eficiencia
-          energética las convierten en la opción más popular del mercado.
+          Soluciones especializadas para proteger zonas en contacto constante
+          con el agua como baños, albercas, cisternas y cimentaciones. Ofrecen
+          desde secado ultra rápido hasta resistencia a la presión hidrostática
+          más extrema.
         </p>
       </div>
     </div>
   </div>
 </section>
 
-
 <section class="" id="">
-  <div class="mx-4"><h3 class="text-primary text-center text-3xl" data-aos="fade-right">Impermeabilizantes <strong class="text-accent" >PVC destacados</strong></h3></div>
+  <div class="mx-4">
+    <h3 class="text-primary text-center text-3xl" data-aos="fade-right">
+      <strong class="text-accent">Membranas Líquidas y Cementosas</strong> destacadas
+    </h3>
+  </div>
 </section>
