--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import LiquidosMapei from '@components/landing/LiquidosMapei.astro';
 import FooterBottom from "@components/FooterBottom.astro";
 import Instalacion from "@components/landing/Instalacion.astro";
 import Beneficios from "@components/landing/Beneficios.astro";
-import Pvc from '@components/landing/Pvc.astro';
+import Membranas from '@components/landing/Membranas.astro';
 import Liquidos from '@components/landing/Liquidos.astro';
 import Acrilicos from '@components/landing/Acrilicos.astro';
 import Asfalticos from '@components/landing/Asfalticos.astro';
@@ -45,8 +45,8 @@ import Asfalticos from '@components/landing/Asfalticos.astro';
   </div>
 
   <div class="bg-[url('/src/assets/images/fondos/fondo-claro-meteoro.webp')] bg-cover bg-center bg-no-repeat">
-    <Pvc />
-  <ProductsByBrand categoria="Impermeabilizantes PVC" bgColor="" />
+    <Membranas />
+    <ProductsByBrand categoria="Membranas Liquidas" bgColor="" />
   </div>
 
   <div class="bg-[#033441] bg-cover bg-center bg-no-repeat">
