--- a/src/components/landing/Instalacion.astro
+++ b/src/components/landing/Instalacion.astro
@@ -13,7 +13,7 @@ import sistemaImage2 from "@assets/images/aplicadores-de-impermeabilizantes-mape
     <div class="w-full md:w-1/2">
       <Image
         src={sistemaImage2}
-        alt=" Impermeabilizantes GAF para techos"
+        alt=" Impermeabilizantes Mapei para techos"
         class="rounded-lg w-full h-auto shadow-lg hover:shadow-xl transition-shadow duration-300"
         width={743}
         height={557}
