--- a/src/components/landing/Introduccion.astro
+++ b/src/components/landing/Introduccion.astro
@@ -13,7 +13,7 @@ import sistemaImage from "@assets/images/proyectos-de-impermeabilizantes-mapei-e
     <div class="w-full md:w-1/2 pb-4 md:pb-0">
       <Image
         src={sistemaImage}
-        alt="Ventajas de los Impermeabilizantes Mapei"
+        alt="Por que elegir los Impermeabilizantes Mapei en México"
         class="rounded-lg w-full h-auto"
         width={sistemaImage.width}
         height={sistemaImage.height}
