--- a/src/components/landing/Liquidos.astro
+++ b/src/components/landing/Liquidos.astro
@@ -16,8 +16,11 @@ import impermeabilizantesImage from "@assets/images/impermeabilizacion-techo-map
           src={impermeabilizantesImage}
           alt="Impermeabilizantes Líquidos Mapei"
           class="rounded-lg w-full h-auto"
-          width={889}
-          height={667}
+          
+          width={impermeabilizantesImage.width}
+          height={impermeabilizantesImage.height}
+          sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px",
+          densities={[1, 1.5, 2]}
           loading="lazy"
           data-aos="fade-right"
         />
