--- a/src/components/landing/MantosAsfalticos.astro
+++ b/src/components/landing/MantosAsfalticos.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 
 // Importación de la imagen descriptiva de la empresa
-import mantosAsfalticosImage from "@assets/images/impermeabilizacion-complementos-mapei-mexico.webp";
+import mantosAsfalticosImage from "@assets/images/membrana-asfaltica-impermeabilizante-mapei.webp";
 ---
 
 <section class="py-12" id="productos">
@@ -15,7 +15,7 @@ import mantosAsfalticosImage from "@assets/images/impermeabilizacion-complemento
         <Image
           src={mantosAsfalticosImage}
           alt="Mantos Asfálticos Mapei"
-          class="rounded-lg w-full h-auto"
+          class="rounded-lg"
           width={mantosAsfalticosImage.width}
           height={mantosAsfalticosImage.height}
           sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px",
