--- a/src/components/FooterBottom.astro
+++ b/src/components/FooterBottom.astro
@@ -3,6 +3,6 @@
     <div
     class="max-w-6xl mx-auto p-6">
     <p class="text-white py-6"><a href="/aviso" rel="nofollow" class="hover:text-persianRed">Aviso de privacidad</a></p>
-    <p class="text-white pb-8">Somos Distribuidores y Aplicadores Certificados GAF en México, Este no es el sitio web oficial de GAF.</p>
+    <p class="text-white pb-8">Somos Distribuidores y Aplicadores Certificados Mapei en México, Este no es el sitio web oficial de Mapei.</p>
     </div>
 </div>
