--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import myLogoImage from "@assets/images/logo-ccs-azul.svg";
       <a href="/" class="inline-block">
         <Image
           src={myLogoImage}
-          alt="Logo Impermeabilizantes GAF"
+          alt="Logo Impermeabilizantes MAPEI"
           width={myLogoImage.width / 2}
           densities={[176, 142]}
           class="aspect-[75/22] header-logo w-44 md:w-52 lg:w-64 object-contain transition-all duration-300"
@@ -71,7 +71,7 @@ import myLogoImage from "@assets/images/logo-ccs-azul.svg";
         <h3 class="title text-accent">ASESORÍA PROFESIONAL</h3>
         <p class="tel flex items-center text-primary">
           <a
-            href="https://wa.me/5213310793173?text=Hola,%20me%20interesa%20recibir%20información%20sobre%20los%20productos%20GAF"
+            href="https://wa.me/5213310793173?text=Hola,%20me%20interesa%20recibir%20información%20sobre%20los%20productos%20MAPEI"
             target="_blank"
             class="flex items-center space-x-2 hover:text-accent transition-all duration-300"
           >
