--- a/src/components/WhatsAppList.astro
+++ b/src/components/WhatsAppList.astro
@@ -4,8 +4,8 @@ import { Icon } from "astro-icon/components";
 
 // Información de los teléfonos
 const phones = [
-  { icon: "whatsapp", number: "33-1079-3173", link: "https://wa.me/5213310793173?text=Hola,%20solicito%20información%20sobre%20los%20impermeabilizantes%20GAF" },
-  { icon: "whatsapp", number: "55-6037-0930", link: "https://wa.me/5215560370930?text=Hola,%20solicito%20información%20sobre%20los%20impermeabilizantes%20GAF" },
+  { icon: "whatsapp", number: "33-1079-3173", link: "https://wa.me/5213310793173?text=Hola,%20solicito%20información%20sobre%20los%20impermeabilizantes%20MAPEI" },
+  { icon: "whatsapp", number: "55-6037-0930", link: "https://wa.me/5215560370930?text=Hola,%20solicito%20información%20sobre%20los%20impermeabilizantes%20MAPEI" },
 ];
 ---
 
