--- a/src/components/landing/Asfalticos.astro
+++ b/src/components/landing/Asfalticos.astro
@@ -15,7 +15,7 @@ import sistemaImage from "@assets/images/impermeabilizantes-asfalticos-gaf.webp"
       <div class="w-full lg:w-1/2">
         <Image
           src={sistemaImage}
-          alt="Impermeabilizantes Asfálticos GAF"
+          alt="Impermeabilizantes Asfálticos MAPEI"
           class="rounded-lg w-full h-auto"
           width={547}
           height={410}
@@ -30,7 +30,7 @@ import sistemaImage from "@assets/images/impermeabilizantes-asfalticos-gaf.webp"
           class="text-primary text-2xl md:text-3xl font-bold mb-2 leading-snug"
           data-aos="fade-right"
         >
-          Impermeabilizantes <strong class="text-accent">Asfálticos</strong> GAF
+          Impermeabilizantes <strong class="text-accent">Asfálticos</strong> MAPEI
         </h2>
         <div class="w-[140px] h-[2px] bg-accent mb-6"></div>
         <p class="text-gray-700 text-lg leading-relaxed" data-aos="fade-right">
