--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import MantosAsfalticos from '@components/landing/MantosAsfalticos.astro';
   title="Impermeabilizantes Mapei en México | Asesoría Profesional" 
   description="Distribuidor líder de impermeabilizantes Mapei en México. Ofrecemos soluciones de alto desempeño para techos, pisos y estacionamientos. ¡Pide tu asesoría GRATIS!"
   ogtype="website"
-  ogimage="https://www.impergaf.w365.uno/images/impermeabilizantes-gaf-mexico-og.webp"
+  ogimage="https://www.impermapei.w365.uno/images/impermeabilizantes-mapei-mexico-og.webp"
   noindex={false}
 >
   <slot />
