--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import Footer from '@components/Footer.astro';
   title="Página no encontrada" 
   description="Página no encontrada"
   ogtype="website"
-  ogimage="https://www.impergaf.w365.uno/images/impermeabilizantes-gaf-mexico-og.webp"
+  ogimage="https://www.impermapei.w365.uno/images/impermeabilizantes-mapei-mexico-og.webp"
   noindex
 >
   <slot />
