--- a/src/components/landing/Beneficios.astro
+++ b/src/components/landing/Beneficios.astro
@@ -27,6 +27,11 @@ const beneficios = [
     icon: "mdi:check-decagram-outline", // Cambia el ícono según sea necesario
     title: "Respaldo Global, Presencia Local",
     description: "La confianza de una marca líder mundial con plantas de producción en México, asegurando productos adaptados a nuestras condiciones y un suministro confiable."
+  },
+  {
+    icon: "mdi:world-wide-web", // Cambia el ícono según sea necesario
+    title: "Cumplimiento de Normas Internacionales",
+    description: "Productos rigurosamente probados que superan los más altos estándares de la industria (ANSI, ASTM, IAPMO), garantizando un rendimiento confiable y especificaciones técnicas precisas para cada proyecto."
   }
 ];
 ---
